--- a/config.gradle
+++ b/config.gradle
@@ -26,6 +26,7 @@ ext {
             constraint_layout    : "1.0.2",
             permissionsdispatcher: "2.3.2",
             hellocharts          : "v1.5.8",
-            fab                  : "1.6.4"
+            fab                  : "1.6.4",
+            hawk                 : "2.0.1",
     ]
 }
